apps/docs/content/v1/index.mdx
---
title: Getting started
description: Supercharge your Next.js middleware with NEMO
icon: Book
---

import { SquareFunctionIcon, WrenchIcon } from "lucide-react";

## Installation

<Steps>
  <Step>
    ### Paste installation command into your terminal to install package.

    ```package-install
    @rescale/nemo
    ```
  </Step>
  <Step>
    ### Import the package inside middleware.ts file.

    (or create it if you don't have one yet)

    ```typescript title="middleware.ts"
    import { createMiddleware } from '@rescale/nemo';  // [!code ++]

    // [...]
    ```
  </Step>
  <Step>
    ### Use the createMiddleware function to create a middleware helper.

    ```typescript title="middleware.ts"
    import { createMiddleware } from '@rescale/nemo';

    export const middleware = createMiddleware(/* your functions will go here */); // [!code ++]

    // [...]
    ```
  </Step>
  <Step>
    ### Define your middlewares config and update the createMiddleware function parameters.

    ```typescript title="middleware.ts"
    import { createMiddleware } from '@rescale/nemo'; // [!code --]
    import { createMiddleware, type MiddlewareFunctionProps } from '@rescale/nemo'; // [!code ++]

    const middlewares = { // [!code ++]
      '/': [ // [!code ++]
        async ({ request }: MiddlewareFunctionProps) => { // [!code ++]
          console.log('There is NEMO', request.nextUrl.pathname); // [!code ++]
        }, // [!code ++]
      ], // [!code ++]
    }; // [!code ++]

    export const middleware = createMiddleware(/* your functions will go here */); // [!code --]
    export const middleware = createMiddleware(middlewares); // [!code ++]

    // [...]
    ```

    After that step, you should see an `There is NEMO` message in your console for every request made to your application.

    <Cards>
      <Card href="/docs/v1/configuration" title="Configuration" description="Learn more about middlewres configuration" icon={<WrenchIcon/>}/>
      <Card href="/docs/v1/functions" title="Functions" description="Learn more about middlewre functions" icon={<SquareFunctionIcon/>}/>
    </Cards>
  </Step>
  <Step>
    ### Optimize your middleware execution to not execute it on every signle request.

    ```typescript title="middleware.ts"
    // [...]

    export const config = { // [!code ++]
      matcher: ['/((?!_next/|_static|_vercel|[\\w-]+\\.\\w+).*)'], // [!code ++]
    }; // [!code ++]
    ```

    That will prevent your middleware from executing on routes:
    1. `/_next/` (Next.js internals)
    2. `/_static` (inside /public)
    3. `/_vercel` (Vercel internals)
    4. Static files (e.g. `/favicon.ico`, `/sitemap.xml`, `/robots.txt`, etc.)

    <Callout>
      Reed more about [Next.js middleware configuration](https://nextjs.org/docs/app/file-conventions/middleware#config-object-optional)
    </Callout>
  </Step>
  <Step>
    ### Finally, let's put it all together.

    ```typescript title="middleware.ts"
    import { createMiddleware, type MiddlewareFunctionProps } from '@rescale/nemo';

    const middlewares = {
      '/': [
        async ({ request }: MiddlewareFunctionProps) => {
          console.log('There is NEMO', request.nextUrl.pathname);
        },
      ],
    };

    export const middleware = createMiddleware(middlewares);

    export const config = {
      matcher: ['/((?!_next/|_static|_vercel|[\\w-]+\\.\\w+).*)'],
    };
    ```

    That's how should your `middleware.ts` file looks like after all steps.
  </Step>
</Steps>

## Motivation

I'm working with Next.js project for a few years now, after Vercel moved multiple `/**/_middleware.ts` files to a single `/middleware.ts` file, there was a unfilled gap - but just for now. After a 2023 retro I had found that there is no good solution for that problem, so I took matters into my own hands. I wanted to share that motivation with everyone here, as I think that we all need to remember how it all started.

Hope it will save you some time and would make your project DX better!

